Paint a fieldset's border under the legend margin.  Bug 247068, r+sr=dbaron